pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: short-conv-app
  labels:
    components: frontend
spec:
  containers:
    - name: short-conv-app
      image:
      ports:
        - containerPort: 80
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
