pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: conv-app
  labels:
    components: frontend1
spec:
  containers:
    - name: conv-app
      image: antonlarichev/conv-app
      ports:
        - containersPort: 80
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
