clusterip-rabbit.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbit-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 5672
      protocol: TCP
  selector:
    components: rabbit
