node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: short-conv-port
spec:
  spec: NodePort
  ports:
    - port: 3000
      targetPort: 80
      nodePort: 31200
  selector:
    components: frontend
